--- a/pnad.Rmd
+++ b/pnad.Rmd
@@ -1,13 +1,20 @@
 ---
-title: "Exemplos de códigos com a PNAD"
+title: "Exemplos de códigos com a PNAD e LinkedIn"
 author: "Marcelo Ventura"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-#install.packages(c("tidyverse","nycflights12","gapminder","Lahman"))
+#install.packages(c("tidyverse","nycflights12","gapminder","Lahman","httr","rvest","devtools","shiny","shinythemes"))
+library(httr)
+library(rvest)
+library(devtools)
+#install_github("mpiccirilli/Rlinkedin")
+library("Rlinkedin")
 library("tidyverse")
+library("shiny")
+library("shinythemes")
 ```
 
 
@@ -85,16 +92,19 @@ Do gráfico acima podemos inferir que obviamente, todos os tipo de residencias s
 ```{r}
 ggplot(data=tabela[1:1000,])+geom_bar(mapping=aes(x=Tipo.dom))
 ```
+
 Com o gráfico acima verificamos que para a amostra das primeiras 1000 observações, a casa é predominante na base de dados. Mas e para todos os dados?
 
 ```{r}
 ggplot(data=tabela)+geom_bar(mapping=aes(x=Tipo.dom))
 ```
+
 Em 2001 a PNAD foi coletada em um número expressivo de casas. No entanto, como é a relação desse tipo de domicílio com o seu estado? Ela é própria, alugada?
 
 ```{r}
 ggplot(data=tabela)+geom_bar(mapping=aes(x=Tipo.dom,fill=Situacao))
 ```
+
 Ou seja, acima temos 3 histogramas, desenvolvidos com mais camadas por cada pergunta que quisemos responder.
 
 Agora, se quisermos ver por cada estado, qual o tipo de propriedade em cada um, e qual a situação em que ele se encontra?
@@ -108,8 +118,8 @@ Horrível, não? Note que o alpha acima classifica a situação com a transparê
 ggplot(data=tabela)+geom_point(mapping=aes(x=UF,y=Tipo.dom,shape=Situacao))
 ```
 
-
 Ainda assim fica um gráfico pouco legível....pois o comando shape utiliza seis elementos somente. 
+
 ```{r}
 ggplot(data=tabela,aes(x=Tipo.dom,y=Situacao,fill=UF))+geom_bar(stat="identity", position=position_dodge())
 ```
@@ -125,12 +135,12 @@ Reduzindo o número de estados até que a visualização melhora um pouco. Nesse
 ```{r}
 ggplot(data=tabela[1:10000,],aes(x=UF,y=Situacao,fill=Tipo.dom))+geom_bar(stat="identity", position=position_dodge())
 ```
+
 Mudando o elemento de posicao dodge para fill, teremos:
 
 ```{r}
 ggplot(data=tabela[1:10000,])+geom_bar(mapping=aes(x=UF,fill=Tipo.dom), position="fill")
 ```
-
 
 O comando facet_wrap permite gerar vários gráficos, logo, podemos gerar para as 10000 primeiras amostras gráficos por estado. Vejamos:
 
@@ -158,6 +168,7 @@ Agora começaremos as análises analisando a renda domiciliar.
 ggplot(data=tabela) + geom_point(aes(x=Tipo.dom, y=Renda.dom))
 
 ```
+
 Só com o gráfico acima podemos perceber que a renda domiciliar é maior para apartamentos e casas, onde o valor máximo nos apartamentos ultrapassa 75000 reais para 2 entrevistas.
 
 E se colocarmos x=UF?
@@ -220,7 +231,7 @@ tabela.amostra.PNAD2015 <- as.data.frame(cbind(
                 substr(tabela.PNAD2015$V1,1,4),substr(tabela.PNAD2015$V1,5,6),
                 substr(tabela.PNAD2015$V1,7,12),substr(tabela.PNAD2015$V1,13,15),
                 substr(tabela.PNAD2015$V1,18,18),substr(tabela.PNAD2015$V1,27,29),
-                substr(tabela.PNAD2015$V1,33,33),substr(tabela.PNAD2015$V1,119,130),
+                substr(tabela.PNAD2015$V1,33,33),substr(tabela.PNAD2015$V1,67,67),
                 substr(tabela.PNAD2015$V1,148,148),substr(tabela.PNAD2015$V1,737,748),
                 substr(tabela.PNAD2015$V1,703,704)))%>%
   `colnames<-`(c("Ano","UF","Controle","Serie", "Sexo","Idade","Raça","Sabe.ler/escrever","Afaz.dom","Salario.derivado","Anos.estudo"))
@@ -244,7 +255,7 @@ tabela.amostra.PNAD2015$Raça%<>%as.character(.)%>%
   gsub("2","Branca",.)%>%gsub("4","Negra",.)%>%
   gsub("6","Amarela",.)%>%gsub("8","Parda",.)%>%
   gsub("0","Indigena",.)%>%gsub("9","Sem declaração",.)#modificando os objetos vide a raça declarada pelo entrevistado
-tabela.amostra.PNAD2015$`Sabe.ler/escrever`%<>%
+tabela.amostra.PNAD2015$`Sabe.ler/escrever`%<>%as.character(.)%>%
   gsub("1","Sim",.)%>%gsub("3","Não",.)#Verificando a legenda para leitura e escrita.
 tabela.amostra.PNAD2015$Afaz.dom%<>%
   gsub("2","Sim",.)%>%gsub("4","Não",.)%>%gsub(" ","Não aplicável",.)#Verificando a legenda para tarefas domésticas.
@@ -292,4 +303,38 @@ print(summary(probitpnad.pes.2015))
 ```
 O Probit corrobora os resultados do modelo Logit. Ou seja, as mulheres tendem a atingir maiores idades, portanto maiores expectativas de vida. Além disso, os salários tendem a ser menores para mulheres. O inverso vale para os homens.
 
+
+#Exemplo de aplicativo em Shiny para a PNAD
+
+Podemos criar um aplicativo em Shiny de forma a tornar os dados interativos para o usuário, bem como gerar gráficos e etc.
+
+```{r}
+shinyApp(
+    ui = fluidPage(
+      titlePanel("App PNAD :)"),
+      mainPanel(
+      #Output: Tabset w/ plot, summary, and table ----
+      tabsetPanel(type = "tabs",
+                  tabPanel("Gráfico", plotOutput("plot")),
+                  tabPanel("Summary", verbatimTextOutput("summary")),
+                  tabPanel("Head(Table)", dataTableOutput("table"))
+                  )),
+      downloadButton('downloadData', 'Download dados')),
+    server = function(input, output) {
+      output$plot <- renderPlot(ggplot(data=tabela.amostra.PNAD2015)+geom_bar(mapping = aes(x=UF)))
+      output$summary <- renderPrint(summary(tabela.amostra.PNAD2015))
+      output$table <- renderDataTable(tabela.amostra.PNAD2015)
+      output$downloadData <- downloadHandler(
+    filename = function() {
+      paste("data-", Sys.Date(), ".csv", sep="")
+    },
+    content = function(file) {
+      write.csv(tabela.amostra.PNAD2015, file)
+    }
+  )
+}
+    
+  )
+ 
+```
 
